[tool.poetry]
name = "holiday-bot"
version = "0.1.0"
description = ""
authors = ["Иван <romvano@bmstu.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
holidays = "^0.85"
python-telegram-bot = "^22.5"
python_dateutil = "^2.9.0"
pytest-asyncio = "^1.3.0"
anyio = "^4.12.0"
Twisted = "^25.5.0"
attrs = "^25.4.0"
decorator = "^5.2.1"
pytest = "^9.0.2"
pytest-tornasync = "^0.6.0"
pytest-trio = "^0.8.0"
pytest-twisted = "^1.14.3"
requests = "^2.32.5"
aiohttp = "^3.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
